--- a/thesiswork.ipynb
+++ b/thesiswork.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 519,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-03T11:13:11.183247Z",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 520,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.199879Z",
@@ -336,13 +336,60 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 12977 entries, 0 to 12977\n",
-      "Data columns (total 3 columns):\n",
-      "essay_set        12977 non-null int64\n",
-      "essay            12977 non-null object\n",
-      "domain1_score    12977 non-null float64\n",
-      "dtypes: float64(1), int64(1), object(1)\n",
-      "memory usage: 405.5+ KB\n"
+      "RangeIndex: 1726 entries, 0 to 1725\n",
+      "Data columns (total 50 columns):\n",
+      "essay_set               1726 non-null int64\n",
+      "domain1_score           1726 non-null float64\n",
+      "sentences_count         1726 non-null int64\n",
+      "essay_words             1726 non-null object\n",
+      "words_count             1726 non-null int64\n",
+      "punctuatioon_count      1726 non-null int64\n",
+      "spelling_errors         1726 non-null int64\n",
+      "character_count         1726 non-null int64\n",
+      "words_per_sent_ratio    1726 non-null float64\n",
+      "avg_sen_len             1726 non-null float64\n",
+      "english_words           1726 non-null int64\n",
+      "stopwords_count         1726 non-null int64\n",
+      "LS                      1726 non-null int64\n",
+      "TO                      1726 non-null int64\n",
+      "VBN                     1726 non-null int64\n",
+      "WP                      1726 non-null int64\n",
+      "UH                      1726 non-null int64\n",
+      "VBG                     1726 non-null int64\n",
+      "JJ                      1726 non-null int64\n",
+      "VBZ                     1726 non-null int64\n",
+      "VBP                     1726 non-null int64\n",
+      "NN                      1726 non-null int64\n",
+      "DT                      1726 non-null int64\n",
+      "PRP                     1726 non-null int64\n",
+      "WP$                     1726 non-null int64\n",
+      "NNPS                    1726 non-null int64\n",
+      "PRP$                    1726 non-null int64\n",
+      "WDT                     1726 non-null int64\n",
+      "RB                      1726 non-null int64\n",
+      "RBR                     1726 non-null int64\n",
+      "RBS                     1726 non-null int64\n",
+      "VBD                     1726 non-null int64\n",
+      "IN                      1726 non-null int64\n",
+      "FW                      1726 non-null int64\n",
+      "RP                      1726 non-null int64\n",
+      "JJR                     1726 non-null int64\n",
+      "JJS                     1726 non-null int64\n",
+      "PDT                     1726 non-null int64\n",
+      "MD                      1726 non-null int64\n",
+      "VB                      1726 non-null int64\n",
+      "WRB                     1726 non-null int64\n",
+      "NNP                     1726 non-null int64\n",
+      "EX                      1726 non-null int64\n",
+      "NNS                     1726 non-null int64\n",
+      "SYM                     1726 non-null int64\n",
+      "CC                      1726 non-null int64\n",
+      "CD                      1726 non-null int64\n",
+      "POS                     1726 non-null int64\n",
+      "token_count             1726 non-null int64\n",
+      "unique_token_count      1726 non-null int64\n",
+      "dtypes: float64(3), int64(46), object(1)\n",
+      "memory usage: 674.3+ KB\n"
      ]
     }
    ],
@@ -1487,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [
     {
