pd_read_changed

--- a/thesiswork.ipynb
+++ b/thesiswork.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:58:35.393570Z",
@@ -40,7 +40,18 @@
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/michael/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: thinc.extra.search.Beam size changed, may indicate binary incompatibility. Expected 112 from C header, got 120 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/home/michael/anaconda3/lib/python3.6/site-packages/sklearn/utils/deprecation.py:144: FutureWarning: The sklearn.linear_model.base module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.linear_model. Anything that cannot be imported from sklearn.linear_model is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#importing\n",
     "import numpy as np\n",
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.069801Z",
@@ -89,13 +100,13 @@
    "outputs": [],
    "source": [
     "RANDOM_STATE = 47\n",
-    "essays = pd.read_excel('/home/michael/Desktop/thesiswork/data/training_set_rel3.xlsx')\n",
+    "essays = pd.read_excel('training_set_rel3.xlsx')\n",
     "essays = essays[['essay_set','essay', 'domain1_score']].dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.166496Z",
@@ -173,7 +184,7 @@
        "4          1  Dear @LOCATION1, I know having computers has a...            8.0"
       ]
      },
-     "execution_count": 525,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.199879Z",
@@ -203,17 +214,18 @@
       "essay            12977 non-null object\n",
       "domain1_score    12977 non-null float64\n",
       "dtypes: float64(1), int64(1), object(1)\n",
-      "memory usage: 405.5+ KB\n"
+      "memory usage: 405.5+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "essays.info()"
+    "print(essays.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.546573Z",
@@ -224,10 +236,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f9b542268d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f95a740d160>"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-03T12:24:55.286679Z",
@@ -297,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:30.173065Z",
@@ -313,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:33.588437Z",
@@ -324,7 +336,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59ebf3adfd03484f920bb4b610f4c028",
+       "model_id": "c144cfc2fc8748d6bf98cbeef7b4f0fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:36.579929Z",
@@ -364,7 +376,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4c2435e420d449eb6f22588f53d88b0",
+       "model_id": "d896fb5fe2044fd0bd899bf2adecd0d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.390902Z",
@@ -405,7 +417,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29eb3b41f0d9461aad6cf1a7985a809b",
+       "model_id": "92511c6ffa3a47299d5c77cbfb4dabc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -450,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.560497Z",
@@ -461,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eed4f7aeb90b4a99b920ead3806f90c6",
+       "model_id": "adc4d29dbb17409dad5b17a21d3a58d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -493,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.765423Z",
@@ -505,7 +517,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa18c3b4dbb74a16b49d44a69472d875",
+       "model_id": "ea7834e0e3f247aeb29ac0e4b96c1828",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.816586Z",
@@ -557,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.881626Z",
@@ -579,7 +591,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9b6ccc71b364430b05f01d7b22dda61",
+       "model_id": "eb5d28ec059f4141b62a15fbb127af51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -600,7 +612,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37d2600db7a941fca4c96f733874c308",
+       "model_id": "6d59205c67d847eea43a12c4d847c604",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,13 +645,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49308922e3ae4f82bcdfaab63d0f40bd",
+       "model_id": "a373698913af49ccbe12484b064a7cd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -660,7 +672,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1e5b6c799674d3ba02e59292539938c",
+       "model_id": "119ff98972f34fce9f696e6bee542a3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -699,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:52.126107Z",
@@ -715,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:52.133753Z",
@@ -750,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:10.770939Z",
@@ -767,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:12.046766Z",
@@ -781,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:12.376926Z",
@@ -795,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:12.800036Z",
@@ -809,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:13.159473Z",
@@ -832,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:13.574577Z",
@@ -846,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:16.989069Z",
@@ -860,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:17.000378Z",
@@ -882,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:22.991653Z",
@@ -895,7 +907,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:    6.9s finished\n",
+      "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:    4.9s finished\n",
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:    0.9s finished\n"
      ]
@@ -911,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:23.015221Z",
@@ -933,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T13:01:23.031618Z",
@@ -948,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1004,6 +1016,27 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
