--- a/thesiswork.ipynb
+++ b/thesiswork.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:58:35.393570Z",
@@ -32,16 +32,18 @@
     "from spacy.lang.en.stop_words import STOP_WORDS\n",
     "from string import punctuation\n",
     "import nltk\n",
+    "from skll.metrics import kappa\n",
     "from catboost import CatBoostClassifier, CatBoostRegressor\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.feature_selection import VarianceThreshold, SelectKBest, f_classif, f_regression\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer, TfidfTransformer\n",
     "from sklearn.model_selection import cross_val_score, GridSearchCV, cross_val_predict, KFold, StratifiedKFold, train_test_split\n",
     "from sklearn.metrics import classification_report, roc_auc_score, cohen_kappa_score, make_scorer, accuracy_score\n",
     "from sklearn.preprocessing import StandardScaler,scale\n",
-    "from sklearn.linear_model import LogisticRegression, LinearRegression, ElasticNet\n",
-    "from sklearn.ensemble import RandomForestClassifier,RandomForestRegressor, ExtraTreesClassifier\n",
+    "from sklearn.linear_model import LogisticRegression, LinearRegression, ElasticNet, Ridge, Lasso, RidgeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier,RandomForestRegressor, ExtraTreesClassifier, StackingClassifier,StackingRegressor, ExtraTreesRegressor\n",
     "from sklearn.feature_selection import chi2\n",
     "from sklearn.svm import SVC, LinearSVC\n",
     "from tqdm import tqdm_notebook\n",
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.069801Z",
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.166496Z",
@@ -149,7 +151,7 @@
        "4          1  Dear @LOCATION1, I know having computers has a...            8.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.199879Z",
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:15.546573Z",
@@ -206,10 +208,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6ce5031b50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f55a965f590>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-03T12:24:55.286679Z",
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.816586Z",
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:30.173065Z",
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:33.588437Z",
@@ -326,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bff6a24393644d1886a10776e6ea7e9a",
+       "model_id": "8be4aaa572244f5cb144178205b4e760",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:36.579929Z",
@@ -367,7 +369,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef645ab54353461ab879627a829eb9ed",
+       "model_id": "5735635a1d8d429f81812b0ae4b1284d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.390902Z",
@@ -410,7 +412,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf61e345774941bf9d928ca19ee9510f",
+       "model_id": "e312a1e0b52547f08d9bd28c13654474",
        "version_major": 2,
        "version_minor": 0
       },
@@ -456,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.560497Z",
@@ -467,7 +469,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb13a40f0396402180c38e4add9d9432",
+       "model_id": "0d2b7255524a49f9ace17607a5b781b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.765423Z",
@@ -512,7 +514,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c56cbc46038644c8b0a6750e42ee7bc6",
+       "model_id": "9d968bd25f554ae682a798d4f1ba41f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:39.881626Z",
@@ -574,7 +576,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81b29841e9b74d308dcdadbc64e37592",
+       "model_id": "6df21216caa44a84a74fbf82fd1a462e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -595,7 +597,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83b28ae492a54ae89d2805609aef1596",
+       "model_id": "67875b30f8de451d8656d919ca1b5a5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -629,13 +631,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d4ffa4cce7541bbafc680f3a33cc5bf",
+       "model_id": "5511af97dd2c4d4bae2bc5d6cc4c2a47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -656,7 +658,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9e38cdee73c4b11b217b609656aaf50",
+       "model_id": "d116c71b46cb4d349da9016fa8761216",
        "version_major": 2,
        "version_minor": 0
       },
@@ -696,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:52.133753Z",
@@ -781,19 +783,20 @@
    "source": [
     "#All choosen ML models\n",
     "RANDOM_STATE = 47\n",
-    "lin_reg = LinearRegression(n_jobs=-1,normalize=True)\n",
     "log_clf = LogisticRegression(penalty='l2',C=5,n_jobs=-1,random_state = RANDOM_STATE,max_iter=5000000)\n",
-    "catboost_reg = CatBoostRegressor(n_estimators=1000,random_state = RANDOM_STATE)\n",
-    "svm = LinearSVC(random_state = RANDOM_STATE)\n",
-    "random_forest = RandomForestClassifier(random_state = RANDOM_STATE)\n",
-    "elastic = ElasticNet(l1_ratio=0.01, alpha=0.1, max_iter=100000, random_state=26)\n",
-    "catboost_clf=CatBoostClassifier(n_estimators=1000,random_state = RANDOM_STATE)\n",
-    "NBC=MultinomialNB()"
+    "random_forest_clf = RandomForestClassifier(n_estimators=70,random_state = RANDOM_STATE, n_jobs=-1)\n",
+    "et_clf = ExtraTreesClassifier(n_estimators=70,random_state=RANDOM_STATE, n_jobs=-1)\n",
+    "# Stacking\n",
+    "estimators = [('logistic', log_clf),\n",
+    "              ('ET', et_clf),\n",
+    "              ('rf', random_forest_clf)]\n",
+    "model_stacked_clf=StackingClassifier(estimators=estimators, final_estimator=log_clf, \n",
+    "                         stack_method = 'predict_proba', n_jobs=-1,passthrough=False, cv=StratifiedKFold(n_splits=5,random_state = RANDOM_STATE))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +815,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 1 kappa_score:0.807\n"
+      "Topic 1 kappa_score:0.824\n"
      ]
     },
     {
@@ -831,7 +834,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 2 kappa_score:0.676\n"
+      "Topic 2 kappa_score:0.695\n"
      ]
     },
     {
@@ -850,7 +853,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 3 kappa_score:0.693\n"
+      "Topic 3 kappa_score:0.702\n"
      ]
     },
     {
@@ -869,7 +872,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 4 kappa_score:0.757\n"
+      "Topic 4 kappa_score:0.765\n"
      ]
     },
     {
@@ -888,7 +891,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 5 kappa_score:0.802\n"
+      "Topic 5 kappa_score:0.811\n"
      ]
     },
     {
@@ -907,7 +910,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 6 kappa_score:0.741\n"
+      "Topic 6 kappa_score:0.761\n"
      ]
     },
     {
@@ -926,7 +929,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 7 kappa_score:0.747\n"
+      "Topic 7 kappa_score:0.752\n"
      ]
     },
     {
@@ -945,31 +948,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 8 kappa_score:0.64\n",
+      "Topic 8 kappa_score:0.703\n",
       "Every topic kappa score\n",
-      "0.8068032987846042\n",
-      "0.676223568115277\n",
-      "0.6926065768993867\n",
-      "0.7573044335065742\n",
-      "0.8024533168422332\n",
-      "0.7406397364869968\n",
-      "0.7468836290517833\n",
-      "0.6399090099334472\n",
-      "Weighted by topic Kappa score: 0.745\n",
-      "Average Kappa score: 0.733\n"
+      "0.824115927475766\n",
+      "0.6946759204190012\n",
+      "0.7024779746446894\n",
+      "0.7649434567305947\n",
+      "0.81059042402279\n",
+      "0.7605409454811349\n",
+      "0.7516495447689119\n",
+      "0.7026679580910254\n",
+      "Weighted by topic Kappa score: 0.76\n",
+      "Average Kappa score: 0.751\n"
      ]
     }
    ],
    "source": [
     "#Performing 5 fold cross-validation\n",
-    "model = log_clf\n",
     "kappa_scorer = make_scorer(cohen_kappa_score,weights=\"quadratic\")\n",
-    "splits = KFold(n_splits=5,random_state = RANDOM_STATE)\n",
+    "kappa_scorer_reg = make_scorer(kappa,weights=\"quadratic\")\n",
+    "splits = StratifiedKFold(n_splits=5,random_state = RANDOM_STATE)\n",
     "kappas_means = []\n",
     "weights = []\n",
     "for i in range(1,9):\n",
+    "    if i == 8:\n",
+    "        model = Ridge()\n",
+    "        scorer = kappa_scorer_reg\n",
+    "    else:\n",
+    "        model = model_stacked_clf\n",
+    "        scorer = kappa_scorer\n",
     "    X_reduced, y_train = topics_preprocessing(essays,i)\n",
-    "    cv_scores_kappa_scorer = cross_val_score(model, X_reduced, y_train, cv=splits, scoring=kappa_scorer, n_jobs=-1, verbose=0)\n",
+    "    cv_scores_kappa_scorer = cross_val_score(model, X_reduced, y_train, cv=splits, scoring=scorer, n_jobs=-1, verbose=0)\n",
     "    print('Topic',i,'kappa_score:{}'.format(round(cv_scores_kappa_scorer.mean(),3)))\n",
     "    kappas_means.append(cv_scores_kappa_scorer.mean())\n",
     "    weights.append(len(X_reduced))\n",
@@ -990,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1025,24 +1034,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Training the model \n",
-    "model_saving_persuasive = LogisticRegression(penalty='l2',C=5,n_jobs=-1,random_state = RANDOM_STATE,max_iter=5000000)\n",
+    "model_saving_persuasive = model_stacked_clf\n",
     "model_saving_persuasive.fit(persuasive_essays[0], persuasive_essays[1])\n",
     "pickle.dump(model_saving_persuasive,open('persuasive_model.pkl','wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Training the model \n",
-    "model_saving_critical = LogisticRegression(penalty='l2',C=5,n_jobs=-1,random_state = RANDOM_STATE,max_iter=5000000)\n",
+    "model_saving_critical = model_stacked_clf\n",
     "model_saving_critical.fit(critical_response_essays[0], critical_response_essays[1])\n",
     "pickle.dump(model_saving_critical,open('critical_model.pkl','wb'))"
    ]
