--- a/thesiswork.ipynb
+++ b/thesiswork.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:58:35.393570Z",
@@ -43,7 +43,7 @@
     "from sklearn.metrics import classification_report, roc_auc_score, cohen_kappa_score, make_scorer, accuracy_score\n",
     "from sklearn.preprocessing import StandardScaler,scale\n",
     "from sklearn.linear_model import LogisticRegression, LinearRegression, ElasticNet, Ridge, Lasso, RidgeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier,RandomForestRegressor, ExtraTreesClassifier, StackingClassifier,StackingRegressor, ExtraTreesRegressor\n",
+    "from sklearn.ensemble import RandomForestClassifier,ExtraTreesClassifier, StackingClassifier,GradientBoostingClassifier\n",
     "from sklearn.feature_selection import chi2\n",
     "from sklearn.svm import SVC, LinearSVC\n",
     "from tqdm import tqdm_notebook\n",
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-05T12:41:52.133753Z",
@@ -791,12 +791,12 @@
     "              ('ET', et_clf),\n",
     "              ('rf', random_forest_clf)]\n",
     "model_stacked_clf=StackingClassifier(estimators=estimators, final_estimator=log_clf, \n",
-    "                         stack_method = 'predict_proba', n_jobs=-1,passthrough=False, cv=StratifiedKFold(n_splits=5,random_state = RANDOM_STATE))"
+    "                         stack_method = 'predict_proba', n_jobs=-1,passthrough=False, cv=StratifiedKFold(n_splits=2,random_state = RANDOM_STATE))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 1 kappa_score:0.824\n"
+      "Topic 1 kappa_score:0.822\n"
      ]
     },
     {
@@ -853,7 +853,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 3 kappa_score:0.702\n"
+      "Topic 3 kappa_score:0.71\n"
      ]
     },
     {
@@ -872,7 +872,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 4 kappa_score:0.765\n"
+      "Topic 4 kappa_score:0.769\n"
      ]
     },
     {
@@ -891,7 +891,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 5 kappa_score:0.811\n"
+      "Topic 5 kappa_score:0.808\n"
      ]
     },
     {
@@ -910,7 +910,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 6 kappa_score:0.761\n"
+      "Topic 6 kappa_score:0.758\n"
      ]
     },
     {
@@ -929,7 +929,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 7 kappa_score:0.752\n"
+      "Topic 7 kappa_score:0.753\n"
      ]
     },
     {
@@ -950,16 +950,16 @@
      "text": [
       "Topic 8 kappa_score:0.703\n",
       "Every topic kappa score\n",
-      "0.824115927475766\n",
-      "0.6946759204190012\n",
-      "0.7024779746446894\n",
-      "0.7649434567305947\n",
-      "0.81059042402279\n",
-      "0.7605409454811349\n",
-      "0.7516495447689119\n",
+      "0.8223507520070477\n",
+      "0.6947724996333224\n",
+      "0.7104129699245363\n",
+      "0.7690176769732954\n",
+      "0.8080100922438485\n",
+      "0.7577376274057916\n",
+      "0.7533679240844956\n",
       "0.7026679580910254\n",
       "Weighted by topic Kappa score: 0.76\n",
-      "Average Kappa score: 0.751\n"
+      "Average Kappa score: 0.752\n"
      ]
     }
    ],
