--- a/thesiswork.ipynb
+++ b/thesiswork.ipynb
@@ -294,10 +294,12 @@
    "source": [
     "def preprocessing(essays):\n",
     "    #List of all parts of speech\n",
-    "    list_of_all_tags=['LS', 'TO', 'VBN', \"''\", 'WP', 'UH', 'VBG', 'JJ', 'VBZ', '--', \n",
-    "                      'VBP', 'NN', 'DT', 'PRP', ':', 'WP$', 'NNPS', 'PRP$', 'WDT', '(', ')', '.', ',', \n",
-    "                      '``', '$', 'RB', 'RBR', 'RBS', 'VBD', 'IN', 'FW', 'RP', 'JJR', 'JJS', 'PDT',\n",
-    "                      'MD', 'VB', 'WRB', 'NNP', 'EX', 'NNS', 'SYM', 'CC', 'CD', 'POS']\n",
+    "    list_of_all_tags=['LS', 'TO', 'VBN', \"''\", 'WP', 'UH', 'VBG', \n",
+    "                      'JJ', 'VBZ', '--', 'VBP', 'NN', 'DT', 'PRP', \n",
+    "                      ':', 'WP$', 'NNPS', 'PRP$', 'WDT', '(', ')', \n",
+    "                      '.', ',',  '``', '$', 'RB', 'RBR', 'RBS', 'VBD',\n",
+    "                      'IN', 'FW', 'RP', 'JJR', 'JJS', 'PDT','MD', 'VB', \n",
+    "                      'WRB', 'NNP', 'EX', 'NNS', 'SYM', 'CC', 'CD', 'POS']\n",
     "\n",
     "    # Reseting indexes and lowering all words\n",
     "    essays['essay'] = essays['essay'].apply(lambda x : x.lower())\n",
@@ -397,7 +399,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
